Fixed Contact overflow bug

--- a/src/css/_app.scss
+++ b/src/css/_app.scss
@@ -146,3 +146,7 @@ $gridWidth: 1680px;
         transform: rotate(45deg);
     }
 }
+
+.loader {
+    overflow: hidden;
+}
